# cybertco

./: CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  config.yml  pyproject.toml
data/: capex.csv  opex.csv  projects.csv
docs/: Executive-Brief.md  metrics.md
outputs/: forecast.csv  metrics.json  report.md
src/cybertco/: __init__.py  cli.py  forecast.py  report.py  utils.py
